<resources>
    <string name="app_name">iTracking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_forget_password">Forget Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_account_header">Register your account</string>
    <string name="txt_user_name">Username</string>
    <string name="etxt_username">Enter username</string>
    <string name="etxt_password">Enter password</string>
    <string name="txt_password">Password</string>
    <string name="txt_repeat_password">Repeat password</string>
    <string name="etxt_repeat_password">Enter password again</string>
    <string name="txt_role">Role</string>
    <string name="txt_forget_password_email">Email</string>
    <string name="etxt_forget_password_email">Enter your mail</string>
    <string name="btn_forger_password_send">Send</string>
    <string name="txt_forget_password_title">Recovey password</string>
    <string name="users">Users</string>
    <string name="fragment_users_register">New user</string>
    <string name="update_account_header">Update user</string>
    <string name="action_update">Update</string>
    <string name="fragment_users_update">Update</string>
    <string name="fragment_clients_register">New Client</string>
    <string name="fragment_clients_update">Update Client</string>
    <string name="fragment_orders_register">New Order</string>
    <string name="fragment_orders_update">Update Order</string>
    <string name="title_activity_maps">Map</string>
</resources>
