<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ForgetPasswordActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_forget_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_forget_password_title" />
    <TextView
        android:id="@+id/txt_forget_password_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_forget_password_email" />

    <EditText
        android:id="@+id/etext_forget_password_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/etxt_forget_password_email" />

    <Button
        android:id="@+id/btn_forger_password_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_forger_password_send"
        android:layout_gravity="center"
        android:onClick="RecoveryPassword"/>
</LinearLayout>